# waycap-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cuda-shim/: lib64
.github/workflows/: clippy.yml
src/: lib.rs  utils.rs  waycap_egl.rs  waycap_vulkan.rs
src/capture/: audio.rs
src/encoders/: audio.rs  cuda.rs  dma_buf_encoder.rs  dynamic_encoder.rs  mod.rs  nvenc_encoder.rs  opus_encoder.rs  vaapi_encoder.rs  video.rs
src/pipeline/: builder.rs
src/types/: config.rs  error.rs
