[package]
name = "waycap-rs"
version = "3.0.0"
edition = "2021"
authors = ["Adonis Carvajal <adonis.carvajal2203@gmail.com>"]
description = "High-level Wayland screen capture library with hardware-accelerated encoding"
documentation = "https://adonca2203.github.io/waycap-rs/waycap_rs/"
homepage = "https://github.com/adonca2203/waycap-rs"
repository = "https://github.com/adonca2203/waycap-rs"
license = "MIT"
readme = "README.md"
keywords = ["wayland", "screen-capture", "recording", "linux", "pipewire"]
categories = ["multimedia", "api-bindings", "hardware-support"]
exclude = [".github/", "tests/fixtures", "examples/*.mp4", "*.log"]

[features]
default = ["vaapi"]
vaapi = []
nvidia = ["dep:cust"]
vulkan = ["dep:ash"]
egl = ["dep:khronos-egl", "dep:libloading", "dep:wayland-client", "dep:wayland-sys", "dep:gl"]

[dependencies]
bytemuck = "1.23.0"
drm-fourcc = "2.2.0"
ffmpeg-next = { version = "8.1.x", features = ["codec", "format"] }
libc = "0.2.172"
log = "0.4.27"
pipewire = { git = "https://gitlab.freedesktop.org/Adonca2203/pipewire-rs", branch = "metas"}
portal-screencast-waycap = "1.0.0"
simple-logging = "2.0.2"
image = "0.25.6"
cust = { version = "0.3.2", optional = true }
crossbeam = "0.8.4"
ash = { version = "0.38", optional = true }
gl = { version = "0.14.0", optional = true }
khronos-egl = { version = "6.0.0", features = ["dynamic"], optional = true }
libloading = { version = "0.8.8", optional = true }
wayland-client = { version = "0.29.2", features = ["use_system_lib"], optional = true }
wayland-sys = { version = "0.31.6", optional = true }
